test/src/e2e_vm_tests/test_programs/should_pass/language/enum_variant_imports/src/submodule.sw
library;

pub enum Enum<T> {
    Yes: T,
    No: (),
}
